# financials

./: .env  .gitignore  Charts_README.md  README.md  main.py  main_ingest.py  pyproject.toml
example-data/: AssignmentDataExamples.xlsx
financials/: assign_rules.py  calculator.py  db.py  drive.py  ingest.py  web.py
financials/cfg/: google_types_to_expenses.csv
financials/chart/: chart_common.py  chart_data.py  chart_render.py  chartlib.py
financials/chart/cfg/: bar.json  bar_chart.json  pie.json  plots.json
financials/chart/doc/: A-ChartExample.md  B-ChartExample.md  C-ChartExample.md  Charts_README.md
financials/routes/: __init__.py  api_transactions.py  assign.py  charts.py  dashboard.py  rules.py
financials/scripts/: add_normalized_description.py  delete_entries.py  get_google_types.py  rebuild_assignments.py  remove_transactions.py  update_indexes.py  update_rules.py
financials/static/cfg-plots/: pie.json  plots.json
financials/templates/: assignments.js  chart.js  code.js  dashboard.html  rules.js  styles.css  transactions.js
financials/templates/charts/: chart_menu.html  chart_modal.html
financials/templates/partials/: add_rule_modal.html  assignments_tab.html  rules_tab.html  transactions_tab.html
financials/tests/: test_calculator.py
financials/utils/: google_types.py  helpers.py  services.py
