[tool.poetry]
name = "financials"
version = "0.1.0"
description = ""
authors = ["Roger Chylla <roger.chylla@gmail.com>"]
readme = "README.md"
packages = [{ include = "financials" }]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
numpy = "^2.0.1"
pyyaml = "^6.0.2"
google-api-python-client = "^2.141.0"
google-auth-oauthlib = "^1.2.1"
pandas = "^2.3.2"
pymongo = "^4.15.1"
python-dotenv = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
